@@ -25,6 +25,8 @@ Changes for v2.08
 - Make remoteConfiguration.resizeData(..) handle baselineData correctly (Graham)
 - Make functionBox be populated when opening MacroDialog for remotes that use EZRC (Graham)
 - Add support for importing, exporting and playing Wav files for legacy remotes with modem upgrade capability (Graham)
+-- Private build 7
+- Add menu item to create and then open an HTML summary file, summary.html in the installation folder (Graham)
 
 Changes for v2.07
 -- Release build 1
